deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-kubernetes
  namespace: default
  labels:
    app: desafio-kubernetes
spec:
  type: NodePort #testar para ver se preciso definir como cluster IP ou a linha pode ser deletada;
  selector:
    app: desafio-kubernetes
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
